# ot-harjoitustyo22

./: .gitignore  README.md  pyproject.toml
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: _test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
tasohyppelypeli/: .pylintrc  pyproject.toml  tasks.py
tasohyppelypeli/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
tasohyppelypeli/src/: Main.py  button.py  end_screen.py  game_loop.py  leaderboard.py  level.py  renderer.py  start_screen.py
tasohyppelypeli/src/database/: data.txt  database.py
tasohyppelypeli/src/features/: renderer.py
tasohyppelypeli/src/sprites/: block.py  robot.py
tasohyppelypeli/src/tests/: block_test.py  game_test.py  robot_test.py
tasohyppelypeli/src/ui/: end_screen.py  level.py  start_screen.py
